# felix

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX-PLUGIN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
assets/: felix-image-prompt.md
docs/: agent-identity-images.md  felix-self.md  for-everyone.md  foss-forge-compliance.md  roadmap.md
examples/: README.md
examples/interviews/: README.md  capcom.md  knox.md  sage.md
felix/: __init__.py  cli.py  core.py
skills/use-felix-cli/: SKILL.md
templates/: AGENT.md  AGENTS.md
templates/python-agent-cli/: agentic_context.py  cli.py
tests/: test_core.py
wiki/felix/projects/agent-platform/: project.md
wiki/felix/projects/agent-platform/milestones/: 001-felix-bootstrap.md
wiki/felix/projects/agent-platform/tasks/: 002-create-knox-agent.md  003-create-capcom-agent.md  004-add-agent-audit.md  005-add-agent-adapter-interface.md  006-create-dewey-agent.md  007-move-felix-to-eidos-agi.md  008-add-agent-identity-image-standard.md  009-make-felix-public-portable.md  010-document-private-maintainer-instances.md  011-add-felix-check-command.md  012-credit-llm-wiki-prior-art.md  013-add-agentic-intelligence-context-standard.md  (+14 more)
wiki/felix/projects/personal-agent-platform/: project.md
wiki/felix/wiki/: agent-identity-images.md  agent-map.md  agent-standards.md  capcom-roadmap.md  dewey-roadmap.md  felix-self.md  for-everyone.md  foss-forge-alignment.md  index.md  knox-roadmap.md  north-stars.md  personal-agent-map.md  private-maintainer-instances.md  self-improvement-loop.md  yoneda-agent-interface.md
(+6 files in other folders)
