[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "felix"
version = "0.1.0"
description = "Fix-it Felix for Daniel's personal agent system."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
felix = "felix.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["felix*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

